--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 					</div>
 
-					<div class="result">
+					<div class="res">
 
 						<div class="val">
 							0
@@ -65,6 +65,6 @@
 		</div>	
 	</div>
 	
-	<script src="/js/index.js"></script>
+	<script src="/js/index.js" type="module"></script>
 </body>
 </html>
